objects/RH_Order__c.object
<CustomObject>
    <fields>
        <fullName>ATG_Account_ID__c</fullName>
        <description>ATG Account ID. Unique ID associated with a customer.</description>
        <label>My Account ID (ATG)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accommodation_Amount__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. Functionality for this field was not in scope for Phase 1.</description>
        <label>Accommodation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for use with the MDM project by Traction on Demand. This field gets updated automatically after the SSV record has been created and processed, and the system has determined the correct Business or Person Account record to which this Order should be linked. Editable by those with the Data Stewardship Permission Set only. Other users can create Stewardship Requests if Orders are linked to the incorrect Business or Person Account record.</description>
        <label>Account Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders Sold To this Account</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Account)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Charge_Credited__c</fullName>
        <label>Additional Charge Credited</label>
        <summarizedField>Ship_To__c.Additional_Charge_Credited__c</summarizedField>
        <summaryForeignKey>Ship_To__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Additional_Charge__c</fullName>
        <label>Additional Charge</label>
        <summarizedField>Ship_To__c.Additional_Charge__c</summarizedField>
        <summaryForeignKey>Ship_To__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Additional_Freight__c</fullName>
        <label>Additional Freight</label>
        <summarizedField>Ship_To__c.Additional_Freight__c</summarizedField>
        <summaryForeignKey>Ship_To__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Additional_To_Email_Addresses__c</fullName>
        <inlineHelpText>Enter additional email addresses to send the email to.  Each email address must be separated by a comma.</inlineHelpText>
        <label>Additional To Email Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address Bill To</label>
        <referenceTo>Contact_Address__c</referenceTo>
        <relationshipLabel>Orders (Address Bill To)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address Sold To</label>
        <referenceTo>Contact_Address__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternate_Order_Number__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>In CW, this is equal to the ATG Order Number or the Contract Order Number</inlineHelpText>
        <label>Alternate Order Number</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Associated_Orders__c</fullName>
        <inlineHelpText>Please enter any  associated order number here for your reference.</inlineHelpText>
        <label>Associated Orders</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AuditLog__c</fullName>
        <description>Logs the change to the customer number for this order</description>
        <label>AuditLog</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIlling_Request_Flag__c</fullName>
        <inlineHelpText>Set &apos;R&apos; from Mule when request is received from ATG. SF will update it to &apos;S&apos;</inlineHelpText>
        <label>Billing Request Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_1__c</fullName>
        <description>CW Bill To Address Line 1</description>
        <label>Bill To Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_2__c</fullName>
        <label>Bill To Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_3__c</fullName>
        <description>CW Bill To Address 3</description>
        <label>Bill To Address 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <formula>IF( 
AND 
( 
ISBLANK(Bill_To_Address_1__c), 
ISBLANK(Bill_To_Address_2__c), 
ISBLANK(Bill_To_Company__c), 
ISBLANK(Bill_To_City__c), 
ISBLANK(Bill_To_State__c), 
ISBLANK(Bill_To_Zip__c), 
ISBLANK(Bill_To_Country__c) 
), 
null, 
Bill_To_Address_1__c + BR() + Bill_To_Address_2__c + BR() + Bill_To_Address_3__c + BR() + Bill_To_Address_4__c + BR() + Bill_To_City__c + &quot;, &quot; + Bill_To_State__c + &quot; &quot; + Bill_To_Zip__c + BR() + Bill_To_Country__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <description>CW Bill To City</description>
        <label>Bill To City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Company__c</fullName>
        <label>Bill To Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Contact_Address__c</fullName>
        <description>Field created to display Bill To address fields and to be used for field history tracking. Field will be updated with code.</description>
        <label>Bill To Contact Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country__c</fullName>
        <description>CW Bill To Country</description>
        <label>Bill To Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Day_Phone__c</fullName>
        <description>CW Bill To Daytime Phone</description>
        <label>Bill To Day Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bill_To_Email__c</fullName>
        <label>Bill To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bill_To_First_Name__c</fullName>
        <label>Bill To First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Last_Name__c</fullName>
        <description>CW Bill To Last Name</description>
        <label>Bill To Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Name__c</fullName>
        <formula>IF(
AND(ISBLANK(Bill_To_Last_Name__c), ISBLANK(Bill_To_First_Name__c)), null, Bill_To_Last_Name__c + &quot;, &quot; + Bill_To_First_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Night_Phone__c</fullName>
        <description>CW Sold to Night Phone</description>
        <label>Bill To Night Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bill_To_State__c</fullName>
        <description>CW Bill To State</description>
        <label>Bill To State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Zip__c</fullName>
        <description>CW Bill To Zip</description>
        <label>Bill To Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CW_Upload_DateTime__c</fullName>
        <label>CW Upload Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Callout_Contacts__c</fullName>
        <inlineHelpText>Number of times the customer has been contacted by phone via a case.</inlineHelpText>
        <label>Callout Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseOwner_Email__c</fullName>
        <label>CaseOwner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <formula>Case__r.Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for use with the MDM project by Traction on Demand. This field gets updated automatically after the SSV record has been created and processed, and the system has determined the correct Business Contact or Person Account record to which this Order should be linked. Editable by those with the Data Stewardship Permission Set only. Other users can create Stewardship Requests if Orders are linked to the incorrect Business or Person contact record.</description>
        <label>Contact Sold To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders Sold To this Contact</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_Time_Hour__c</fullName>
        <formula>VALUE(MID (TEXT ( CreatedDate   - (0.0417 * 7 )), 12, 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Time Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Address_Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for use with the MDM project by Traction on Demand. This field gets updated automatically after the SSV record has been created and processed, and the Account record has been completed. For Person Accounts, this field will be updated with the Customer Address record associated to this Order.</description>
        <label>Customer Address Sold To</label>
        <referenceTo>Customer_Address__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Request_Notes__c</fullName>
        <label>Request Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DA_Order_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DA Order Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Market__c</fullName>
        <label>Delivery Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01 - BALTIMORE, MD</fullName>
                </value>
                <value>
                    <fullName>02 - BAY AREA, CA</fullName>
                </value>
                <value>
                    <fullName>03 - BOSTON, MA</fullName>
                </value>
                <value>
                    <fullName>05 - AUSTIN, TX</fullName>
                </value>
                <value>
                    <fullName>06 - SEATTLE, WA</fullName>
                </value>
                <value>
                    <fullName>07 - NY/NJ (AVENAL)</fullName>
                </value>
                <value>
                    <fullName>08 - LA/SAN DIEGO</fullName>
                </value>
                <value>
                    <fullName>09 - GEORGIA</fullName>
                </value>
                <value>
                    <fullName>10 - LAKELAND, FL</fullName>
                </value>
                <value>
                    <fullName>11 - WESTON, FL</fullName>
                </value>
                <value>
                    <fullName>12 - SALT LAKE CITY, UT</fullName>
                </value>
                <value>
                    <fullName>13 - PORTLAND, OR</fullName>
                </value>
                <value>
                    <fullName>14 - LAS VEGAS, NV</fullName>
                </value>
                <value>
                    <fullName>15 - DENVER, CO</fullName>
                </value>
                <value>
                    <fullName>16 - CHICAGO, IL</fullName>
                </value>
                <value>
                    <fullName>17 - EDINA/ST. PAUL, MN</fullName>
                </value>
                <value>
                    <fullName>18 - PITTSBURGH, PA</fullName>
                </value>
                <value>
                    <fullName>19 - PHOENIX, AZ</fullName>
                </value>
                <value>
                    <fullName>21 - METAIRIE, LA</fullName>
                </value>
                <value>
                    <fullName>22 - SAN ANTONIO, TX</fullName>
                </value>
                <value>
                    <fullName>23 - BIRMINGHAM, AL</fullName>
                </value>
                <value>
                    <fullName>24 - WEST JEFFERSON, OH</fullName>
                </value>
                <value>
                    <fullName>25 - INDIANAPOLIS, IN</fullName>
                </value>
                <value>
                    <fullName>26 - LEAWOOD, MO</fullName>
                </value>
                <value>
                    <fullName>27 - NASHVILLE, TN</fullName>
                </value>
                <value>
                    <fullName>28 - ST. LOUIS, MO</fullName>
                </value>
                <value>
                    <fullName>29 - TROY, MI</fullName>
                </value>
                <value>
                    <fullName>30 - TULSA, OK</fullName>
                </value>
                <value>
                    <fullName>32 - EDMONTON, AB</fullName>
                </value>
                <value>
                    <fullName>33 - MONTREAL, QB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Designer__c</fullName>
        <description>Designer assigned to order</description>
        <label>Order Classification</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXT_Order_Number__c</fullName>
        <externalId>true</externalId>
        <label>EXT Order Number</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email_Contacts__c</fullName>
        <inlineHelpText>Number of times the customer has been contacted by email via a case.</inlineHelpText>
        <label>Email Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entered_by_Associate__c</fullName>
        <description>Associate entering order</description>
        <label>Entered by Associate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Warning_Icon__c</fullName>
        <formula>IF( Fraud_Warning__c = TRUE,IMAGE(&apos;resource/1458160800000/Fraud_Warning&apos;,&quot;&quot;)&amp;&quot;Please review order notes for details and contact paymentfraud@rh.com with any questions&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fraud Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Warning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fraud Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <label>Freight</label>
        <summarizedField>Ship_To__c.Freight__c</summarizedField>
        <summaryForeignKey>Ship_To__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Gallery_Number__c</fullName>
        <description>Store Number</description>
        <label>Gallery Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gallery_Point_of_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gallery Point of Control</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gallery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gallery</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>GalleryOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grey_Card_Opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Member Card Opt In?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grey_Card__c</fullName>
        <formula>IF(NOT( ISBLANK( Membership_ID_Lookup__c)),

(HYPERLINK(&quot;/&quot; &amp; Membership_ID_Lookup__c, IMAGE(&apos;/resource/1474409533000/RHMember&apos;, &quot;&quot;) , &quot;_self&quot;)), 

&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RH Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Payment_Amount__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. Functionality for this field was not in scope for Phase 1.</description>
        <label>Gross Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HDL_Order_Line__c</fullName>
        <label>HDL Order Line</label>
        <summaryFilterItems>
            <field>Order_Line_Items__c.Ship_Via__c</field>
            <operation>equals</operation>
            <value>5,6,77</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Line_Items__c.RH_Order_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Handling_Charges__c</fullName>
        <label>Handling Charges</label>
        <summarizedField>Ship_To__c.Handling_Charges__c</summarizedField>
        <summaryForeignKey>Ship_To__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Open_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for use with the MDM project by Traction on Demand. Functionality for this field was not in scope for Phase 1.</description>
        <label>Has Open Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Value_Order_Update_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Value Order Update Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Impact_On_Account_Lifetime_Value__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. No known use for this field.</description>
        <label>Last Impact On Account Lifetime Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Impact_On_Contact_Lifetime_Value__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. No known use for this field.</description>
        <label>Last Impact On Contact Lifetime Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Membership_Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This value is set by BI from CW or ATG</description>
        <label>Membership Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership_Auto_Renewal_Order__c</fullName>
        <formula>IF(Number_of_Order_Lines__c  &gt; 0 &amp;&amp; Number_of_Order_Lines__c = Number_of_MembershipAutoRenewalSKUs__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Will be checked if all order lines on this order are one of the Membership Auto Renewal SKUs.</inlineHelpText>
        <label>Membership Auto Renewal Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership_Enrollment_Date__c</fullName>
        <label>Membership Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Expiration_Date__c</fullName>
        <label>Membership Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_ID_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Membership ID</label>
        <referenceTo>Membership__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Membership_ID__c</fullName>
        <label>Membership ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Renewal_Term__c</fullName>
        <label>Membership Renewal Term</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Shipped_Date__c</fullName>
        <label>Member Card Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Type__c</fullName>
        <description>Type of membership coming from BI CW and ATG</description>
        <label>Membership Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Welcome_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Membership Welcome Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merchandise_Subtotal__c</fullName>
        <label>Merchandise Subtotal</label>
        <summarizedField>Ship_To__c.Merchandise_Subtotal__c</summarizedField>
        <summaryForeignKey>Ship_To__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>New_Sold_to_Day_Phone__c</fullName>
        <label>New Sold To Day Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Sold_to_Email__c</fullName>
        <label>New Sold To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Sold_to_Night_Phone__c</fullName>
        <label>New Sold To Night Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Number_of_MembershipAutoRenewalSKUs__c</fullName>
        <label>Number of MembershipAutoRenewalSKUs</label>
        <summaryFilterItems>
            <field>Order_Line_Items__c.MembershipAutoRenewalSKU__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Line_Items__c.RH_Order_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Order_Lines__c</fullName>
        <label>Number of Order Lines</label>
        <summaryForeignKey>Order_Line_Items__c.RH_Order_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Ship_Tos__c</fullName>
        <label>Number of Ship Tos</label>
        <summaryForeignKey>Ship_To__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <formula>Opportunity__r.Record_Type_Developer_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Closed__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. This field is needed for the Timeline app feature.</description>
        <formula>ISPICKVAL(Status__c, &quot;Closed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <description>Date the order was entered</description>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Notification_Visibility__c</fullName>
        <inlineHelpText>Enter an RH email address to be copied on various customer Order notifications (like Delay Notifications, etc.).</inlineHelpText>
        <label>Order Notification Visibility</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Order_Number_and_Amount__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. This field is needed for the Timeline app feature.</description>
        <formula>Name + &quot; - &quot; +  Total_Order_Amount_Timeline__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Number and Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Open__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. This field is needed for the Timeline app feature.</description>
        <formula>ISPICKVAL(Status__c , &quot;Open&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Status_Other__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. This field is needed for the Timeline app feature.</description>
        <formula>!(ISPICKVAL(Status__c, &quot;Open&quot;) || ISPICKVAL(Status__c, &quot;Closed&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Status Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Total__c</fullName>
        <label>Order Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Type_Category__c</fullName>
        <label>Order Type Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Home Office</fullName>
                </value>
                <value>
                    <fullName>Specialty Group</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Type_Code__c</fullName>
        <label>Order Type Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Type_Description__c</fullName>
        <description>CW will push Order Type Description from CW into this field.</description>
        <label>Order Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Projected_Completion_Date__c</fullName>
        <formula>Case__r.Contact_Date__c + 14</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Id__c</fullName>
        <externalId>true</externalId>
        <label>Quote Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RRD_Membership_Status__c</fullName>
        <label>RRD Membership Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MC</fullName>
                    <default>true</default>
                    <label>MC</label>
                </value>
                <value>
                    <fullName>MU</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reorder_Count__c</fullName>
        <label>Reorder Count</label>
        <summarizedField>Order_Line_Items__c.Reorder_Count__c</summarizedField>
        <summaryForeignKey>Order_Line_Items__c.RH_Order_Number__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Same_Day_Order_Number__c</fullName>
        <label>Same Day Order Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Test__c</fullName>
        <label>Search Test</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SendGrid_Request_Date__c</fullName>
        <inlineHelpText>Date/time of most recent request to SendGrid to send an email for this Order. Note - this will not be the same as the date/time the email is actually sent (but it should be close).</inlineHelpText>
        <label>SendGrid Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SendGrid_Result__c</fullName>
        <label>SendGrid Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipTo1_Address__c</fullName>
        <label>Ship To 1 Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ShipTo1_Day_Phone__c</fullName>
        <label>Ship To 1 Day Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ShipTo1_Email__c</fullName>
        <label>Ship To 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ShipTo1_Name__c</fullName>
        <label>Ship To 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipTo1_Night_Phone__c</fullName>
        <label>Ship To 1 Night Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ship_To_1_Order_Description__c</fullName>
        <label>Ship To 1 Order Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>